js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/inlineChild.4.kt
class InlineChild : Class() {
    inline fun inlineMethod(): String {
        return "4"
    }
}
